--- a/CleanBlog.Web/CleanBlog.Web.csproj
+++ b/CleanBlog.Web/CleanBlog.Web.csproj
@@ -286,30 +286,19 @@
     <Content Include="config\logviewer.searches.config.js" />
     <Content Include="Global.asax" />
     <Content Include="index.html" />
+    <Content Include="Scripts\contactForm.js" />
+    <None Include="Scripts\jquery-1.8.0.intellisense.js" />
+    <Content Include="Scripts\jquery-1.8.0.js" />
+    <Content Include="Scripts\jquery-1.8.0.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Data\Models\Article.generated.cs" />
-    <Compile Include="App_Data\Models\ArticleControls.generated.cs" />
-    <Compile Include="App_Data\Models\ArticleList.generated.cs" />
-    <Compile Include="App_Data\Models\Contact.generated.cs" />
-    <Compile Include="App_Data\Models\ContactFormControls.generated.cs" />
-    <Compile Include="App_Data\Models\Content.generated.cs" />
-    <Compile Include="App_Data\Models\ContentControls.generated.cs" />
-    <Compile Include="App_Data\Models\Error.generated.cs" />
-    <Compile Include="App_Data\Models\File.generated.cs" />
-    <Compile Include="App_Data\Models\Folder.generated.cs" />
-    <Compile Include="App_Data\Models\FooterControls.generated.cs" />
-    <Compile Include="App_Data\Models\HeaderControls.generated.cs" />
-    <Compile Include="App_Data\Models\Home.generated.cs" />
-    <Compile Include="App_Data\Models\IconLinkItem.generated.cs" />
-    <Compile Include="App_Data\Models\Image.generated.cs" />
-    <Compile Include="App_Data\Models\MainImageControls.generated.cs" />
-    <Compile Include="App_Data\Models\Member.generated.cs" />
-    <Compile Include="App_Data\Models\Search.generated.cs" />
-    <Compile Include="App_Data\Models\SEocontrols.generated.cs" />
-    <Compile Include="App_Data\Models\VisibilityControls.generated.cs" />
-    <Compile Include="App_Data\Models\XMlsitemap.generated.cs" />
+    <Compile Include="App_Data\Models\*.generated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -348,6 +337,8 @@
     <Content Include="Views\Partials\Grid\Clean.cshtml" />
     <Content Include="Views\error.cshtml" />
     <Content Include="Views\xMLSitemap.cshtml" />
+    <Content Include="Views\Partials\Contact\contactForm.cshtml" />
+    <Content Include="Views\Partials\Contact\result.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -360,6 +351,9 @@
       <Project>{90984460-4e9a-482b-9bcd-7557eb45acd9}</Project>
       <Name>CleanBlog.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="js\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
