--- a/CleanBlog.Web/Web.config
+++ b/CleanBlog.Web/Web.config
@@ -96,8 +96,8 @@
             <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
             <add verb="*" path="DependencyHandler.axd" type="ClientDependency.Core.CompositeFiles.CompositeDependencyHandler, ClientDependency.Core " />
         </httpHandlers>
-
-        <compilation defaultLanguage="c#" debug="false" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
+        <!--debug should be set to false to allow use cached partial-->
+        <compilation defaultLanguage="c#" debug="true" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
 
         <authentication mode="Forms">
             <forms name="yourAuthCookie" loginUrl="login.aspx" protection="All" path="/" />
